# processing-hmed

./: .gitignore  README.adoc  process.py  pyproject.toml
resources/: naming_conventions.adoc
